# varn

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  k6-stress.js  varn.py
.github/workflows/: build-all.yml  build-android.yml  build-apple.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-wasm.yml  build-windows.yml  deploy-site.yml  release.yml
android/: settings.gradle.kts
android/varn/: build.gradle.kts
android/varn/src/main/cpp/: CMakeLists.txt  jni.cpp
apps/lua/public/: index.html  style.css
apps/wasm/: index.html  package.json  tsconfig.json  vite.config.ts
apps/wasm/scripts/: copy-wasm.mjs
apps/wasm/src/: dom.ts  home.ts  main.ts  playground.ts  style.css  worker.ts
bench/: Dockerfile  README.md  docker-bench.sh  docker-compose.yml  run.sh
bench/servers/: asgi_server.py  node_server.js  package.json  varn_server.lua
bench/sql/: seed.sql
build-baseline/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-baseline/Poco/: PocoCryptoTargets.cmake  PocoFoundationTargets.cmake  PocoNetSSLConfigVersion.cmake  PocoNetSSLTargets.cmake  PocoNetTargets.cmake  PocoUtilConfig.cmake  PocoUtilTargets.cmake
build-verify/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-verify/Poco/: PocoCryptoTargets.cmake  PocoFoundationTargets.cmake  PocoNetSSLTargets.cmake  PocoNetTargets.cmake  PocoUtilTargets.cmake
build-verify/varn_generated/: VarnVersion.h
build-ziptest/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
cmake/: VarnVersion.h.in  dependencies.cmake  helpers.cmake  openssl.cmake  varn-libffi.cmake
cmake/cpm/: cpm-downloader.cmake  varn-dependencies.cmake
cmake/modules/: FindZLIB.cmake
cmake/varn-libffi/: fficonfig.h.in  varn-vendor-libffi.cmake
components/ai/: README.md  http.lua  init.lua
components/ai/adapters/: anthropic.lua  elevenlabs.lua  gemini.lua  openai.lua
components/ai/examples/: audio.lua  image.lua  stream.lua  structured.lua  text.lua  tools.lua  vision.lua
components/ai/tests/: mock_test.lua
components/datetime/: init.lua
components/datetime/examples/: basic.lua
components/datetime/tests/: integration.lua
components/mysql/: init.lua
components/pool/: init.lua
components/redis/: init.lua
components/redis/examples/: basic.lua  hash_and_list.lua
components/redis/tests/: integration.lua
components/retry/: init.lua
components/retry/examples/: basic.lua
components/retry/tests/: integration.lua
components/scheduler/: README.md  init.lua
components/scheduler/examples/: basic.lua  recovery.lua  scheduling.lua
components/scheduler/tests/: scheduler_test.lua
components/test/: init.lua
components/test/examples/: basic.lua
components/test/tests/: integration.lua
components/validate/: init.lua
components/validate/examples/: basic.lua
components/validate/tests/: integration.lua
components/vdo/: dsn.lua  init.lua  sql.lua
components/vdo/driver/: mysql.lua  pgsql.lua  sqlite.lua
components/vdo/examples/: crud.lua  prepared.lua
components/vdo/tests/: integration.lua
docker/: Dockerfile
docs/: architecture.md  async.md  build.md  components.md  design.md  docker.md  lua-api.md  native-modules.md  official-libraries.md  platform-availability.md  roadmap.md  security-test-catalog.md  security.md  stress-test.md  wasm-http-roadmap.md
docs/components/: datetime.md  env.md  redis.md  retry.md  test.md  validate.md  vdo.md
docs/lua-api/: async.md  crypto.md  datetime.md  ffi.md  fs.md  http.md  json.md  log.md  platform.md  process.md  socket.md  xml.md  zip.md
docs/plans/: ai-and-scheduler-components.md
docs/security-tests/: async.md  core.md  cross-cutting.md  crypto.md  ffi.md  fs.md  http-client.md  http-server.md  json.md  log.md  platform.md  socket.md  xml.md  zip.md
include/: lua.hpp
include/varn/crypto/: CryptoPrimitives.h
include/varn/ffi/: FfiModule.h
include/varn/fs/: FsStorage.h
include/varn/http/: HttpClientModule.h  HttpClientPerform.h
include/varn/log/: Log.h
include/varn/platform/: PlatformInfo.h  PlatformModule.h
include/varn/socket/: SocketModule.h
include/varn/zip/: ZipModule.h
modules/api/: README.md  api.cmake
modules/api/src/: Api.cpp
modules/async/: README.md  async.cmake
modules/async/src/: AsyncModule.cpp  AsyncTask.cpp  Promise.cpp
modules/core/: README.md  core.cmake
modules/crypto/: README.md  crypto.cmake
modules/crypto/src/: CryptoCodecs.cpp  CryptoModule.cpp
modules/datetime/: README.md  datetime.cmake
modules/datetime/src/: DatetimeModule.cpp
modules/ffi/: README.md  ffi.cmake  libffi.cmake
modules/ffi/libffi/: varn-vendor-libffi.cmake
modules/ffi/platform/: varn_ffi_dl.c  varn_ffi_dl.h
modules/ffi/src/: FfiModule.cpp
modules/fs/: README.md  fs.cmake
modules/fs/src/: FsModule.cpp
modules/http/: README.md  http.cmake
modules/http/src/: HttpAppModule.cpp  HttpClientModule.cpp  HttpClientResponseLua.h  HttpMultipart.cpp  HttpMultipart.h  HttpRange.cpp  HttpRange.h  HttpServerFactory.cpp  HttpServerModule.cpp  HttpText.cpp  HttpText.h  HttpToken.cpp  HttpToken.h  HttpTypes.cpp  HttpUrl.cpp  HttpUrl.h  HttpUrlForm.cpp  HttpUrlForm.h  MimeTypes.cpp  Router.cpp  StaticContent.cpp  StaticContent.h  StaticFileHandler.cpp
modules/json/: README.md  json.cmake
modules/json/src/: JsonModule.cpp
modules/log/: README.md  log.cmake
modules/log/src/: LogModule.cpp
modules/platform/: README.md  platform.cmake
modules/platform/src/: PlatformInfo.cpp  PlatformModule.cpp
modules/process/: README.md  process.cmake
modules/process/src/: ProcessModule.cpp
modules/socket/: README.md  socket.cmake
modules/xml/: README.md  xml.cmake
modules/zip/: README.md  zip.cmake
src/: crash_handler.h  main.cpp
src/wasm/: VarnWasm.cpp
tests/cpp/: CMakeLists.txt  crypto_test.cpp  http_test.cpp  platform_test.cpp  xml_test.cpp  zip_test.cpp
tools/core/: android.py  apple.py  bench.py  cxx.py  general.py  helper.py  site.py  tests.py  wasm.py
(+322 files in other folders)
